Skeleton homepage and translation page

--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -3,7 +3,7 @@ body {
     background-color: #007BFF; /* Blue background color */
     color: #fff; /* White text for readability against the blue background */
     text-align: center;
-    padding-top: 50px;r
+    padding-top: 50px;
     line-height: 1.6; /* Improved line spacing */
 }
 
