--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ethereum Contract Whisperer</title>
-    <!-- Bootstrap CSS CDN -->
+    <title>Smart Contract Whisperer</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
@@ -13,43 +12,36 @@
 
 <body class="bg-light ethereum-bg">
     <div class="container mt-5">
-        <header class="text-center">
-            <h1 class="display-3">Ethereum Contract Whisperer</h1>
-            <p class="lead subtitle">Your bridge from complex Ethereum contracts to plain English.</p>
+        <header class="text-center mb-5">
+            <h1 class="display-3 mb-3">Smart Contract Whisperer</h1>
+            <p class="lead subtitle">Your bridge from complex smart contracts to plain English.</p>
         </header>
 
-        <section class="intro mt-5 text-center">
-            <p class="font-weight-bold display-4">Ready to Decrypt the Blockchain Code?</p>
+        <section class="intro mb-5 text-center">
+            <p class="font-weight-bold display-4">Ready to Decrypt Smart Contracts?</p>
         </section>
 
-        <section class="scroll-indicator text-center mt-5">
-            <p class="lead">Scroll down to learn more</p>
-            <span style="font-size: 2rem;">⬇️</span> <!-- A simple arrow indicating to scroll down -->
-        </section>
-
-        <section class="how-to mt-5">
-            <h2 class="display-4">How It Works</h2>
+        <section class="how-to mb-5">
+            <h2 class="display-4 mb-3">How It Works</h2>
             <p class="mt-3 lead">
-                Ethereum Contract Whisperer translates the convoluted language of Ethereum contracts into comprehensible sentences. Perfect for both validation and simple curiosity.
+                Contract Whisperer translates the convoluted language of contracts into comprehensible sentences. Perfect for both validation and simple curiosity.
             </p>
-            <ol class="mt-4">
-                <li class="h4">Paste your Ethereum contract code into our translator.</li>
-                <li class="h4">Witness the magic as jargon transforms into clarity.</li>
-                <li class="h4">Get insights, understand functions, and master the crypto game.</li>
+            <ol class="mt-4 pl-5">
+                <li class="h4"><span class="icon-1"></span> Paste your contract code into our translator.</li>
+                <li class="h4"><span class="icon-2"></span> Witness the magic as jargon transforms into clarity.</li>
+                <li class="h4"><span class="icon-3"></span> Get insights, understand functions, and evaluate potential dangers of the contract.</li>
             </ol>
         </section>
 
-        <section class="cta mt-5 text-center">
-            <a href="/translate" class="btn btn-primary btn-lg use-tool-btn">Dive In & Translate</a>
+        <section class="cta mb-5 text-center">
+            <a href="/translate" class="btn btn-primary btn-lg use-tool-btn shadow">Dive In & Translate</a>
         </section>
 
-        <!-- Footer -->
         <footer class="mt-5 text-center text-muted">
-            <p>&copy; 2023 Ethereum Contract Whisperer. Made with 💙 by [Your Name].</p>
+            <p>&copy; 2023 Contract Whisperer.</p>
         </footer>
     </div>
     
-    <!-- Bootstrap JS, Popper.js, and jQuery -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
