--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -22,8 +22,8 @@
         </section>
 
         <section class="how-to mb-5">
-            <h2 class="display-4 mb-3">How It Works</h2>
-            <p class="mt-3 lead">
+            <h2 class="display-4 mb-3" style="text-align: center;">How It Works</h2>
+            <p class="mt-3 lead" style="text-align: center;">
                 Contract Whisperer translates the convoluted language of contracts into comprehensible sentences. Perfect for both validation and simple curiosity.
             </p>
             <ol class="mt-4 pl-5">
